# ipfixcol2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  README.rst  index.html  ipfixcol2.conf.xml.example
doc/: CMakeLists.txt
doc/data/configs/: multiOutput.xml  odidFilter.xml  tcp2anon2json.xml  tcp2unirec.xml  tcpUdp2lnf.xml  udp2json-kafka.xml  udp2json.xml
doc/data/ipfix/: example_flows.ipfix
doc/doxygen/: Doxyfile.in
doc/sphinx/: configuration.rst
doc/systemd/: ipfixcol2@.service
extra_plugins/output/clickhouse/: CMakeLists.txt  README.rst  ipfixcol2-clickhouse-output.spec  schema-helper.py
extra_plugins/output/clickhouse/CMakeModules/: FindRst2Man.cmake  clickhouse-cpp.cmake  fmt.cmake  install_dirs.cmake
extra_plugins/output/clickhouse/doc/: ipfixcol2-clickhouse-output.7.rst
extra_plugins/output/clickhouse/src/: block.h  clickhouse.h  column.h  common.cpp  common.h  config.c  config.cpp  config.h  datatype.cpp  datatype.h  inserter.cpp  inserter.h  main.cpp  plugin.c  plugin.cpp  plugin.h  recparser.cpp  recparser.h  stats.cpp  stats.h  syncqueue.h  syncstack.h  worker.h
extra_plugins/output/kafka-json/: CMakeLists.txt  README.rst
extra_plugins/output/kafka-json/CMakeModules/: FindIPFIXcol2.cmake
extra_plugins/output/kafka-json/doc/: ipfixcol2-kafka-json-output.7.rst
extra_plugins/output/kafka-json/src/: Config.cpp  Config.hpp  Storage.cpp  json.cpp
extra_plugins/output/lnfstore/: CMakeLists.txt  README.rst  files_manager.c  files_manager.h  lnfstore.c  lnfstore.h  storage_basic.c  storage_basic.h  storage_common.h  translator.c  translator.h  utils.c
extra_plugins/output/lnfstore/CMakeModules/: FindLibBFI.cmake  FindLibFds.cmake  FindLibNf.cmake
extra_plugins/output/lnfstore/doc/: ipfixcol2-lnfstore-output.7.rst
extra_plugins/output/lnfstore/src/: configuration.c  (+8 more)
extra_plugins/output/unirec/: CMakeLists.txt  README.rst  configuration.c  configuration.h  fields.c  ipfixcol2-unirec-output.spec.in  lnfstore.h  map.c  map.h  tcp2unirec.xml  translator.c  translator.h  unirec-elements.txt  unirecplugin.c  unirecplugin.h  unirecstore.c
include/: CMakeLists.txt  ipfixcol2.h
include/ipfixcol2/: api.h  api.h.in  common.h  converters.h  convertors.h  data_record.h  ipfix_element.h  ipfix_structures.h  message.h  message_builder.h  message_garbage.h  message_ipfix.h  message_periodic.h  message_session.h  modifier.h  plugins.h  processor.h  session.h  source.h  template.h  template_manager.h  templater.h  utils.h  verbose.h
pkg/: CMakeLists.txt  ipfixcol2.pc.in
pkg/deb/: CMakeLists.txt
pkg/deb/templates/: changelog  changelog.in  control.in  copyright.in  ipfixcol2.install
pkg/rpm/: CMakeLists.txt  ipfixcol.spec.in  ipfixcol2.spec.in
pkg/tgz/: CMakeLists.txt  CPackTGZConfig.cmake.in
src/: CMakeLists.txt  api.h.in  build_config.h.in  ipfixcol.c  main.c  main.cpp  message.c  message_garbage.c  message_internal.h  message_ipfix.c  source.c  template.c  verbose.c
src/core/: CMakeLists.txt  api.c  config_file.cpp  config_file.h  config_file.hpp  configurator.cpp  configurator.h  configurator.hpp  context.c  context.h  converters.c  extension.c  extension.h  fpipe.c  fpipe.h  main.cpp  message_base.c  message_base.h  message_builder.c  message_garbage.c  message_ipfix.c  message_ipfix.h  message_periodic.c  message_periodic.h  message_session.c  message_terminate.c  message_terminate.h  modifier.c  modifier.h  odid_range.c  odid_range.h  parser.c  parser.h  parser_plugin.c  parser_plugin.h  plugin.c  plugin.h  plugin_output_mgr.c  plugin_output_mgr.h  plugin_parser.c  (+11 more)
src/core/configurator/: config_file.cpp  config_file.hpp  configurator.cpp  configurator.hpp  controller.hpp  controller_file.cpp  controller_file.hpp  cpipe.c  cpipe.h  extensions.cpp  extensions.hpp  instance.cpp  instance.hpp  instance_input.cpp  instance_input.hpp  instance_intermediate.cpp  instance_intermediate.hpp  instance_outmgr.cpp  instance_outmgr.hpp  instance_output.cpp  instance_output.hpp  model.cpp  model.hpp  plugin_finder.cpp  plugin_finder.hpp  plugin_mgr.cpp  plugin_mgr.hpp
src/core/netflow2ipfix/: netflow2ipfix.h  netflow5.c  netflow9.c  netflow9_parsers.c  netflow9_parsers.h  netflow9_templates.c  netflow9_templates.h  netflow_parsers.c  netflow_parsers.h  netflow_structs.h
src/plugins/: CMakeLists.txt
src/plugins/input/: CMakeLists.txt
src/plugins/output/: CMakeLists.txt
src/template_manager/: template.c
src/templater/: templater.c  tmpl_algorithms.c  tmpl_algorithms.h  tmpl_common.h  tmpl_template.c  tmpl_template.h
src/tools/: CMakeLists.txt  init-plugin.sh
src/tools/fdsdump/: CMakeLists (copy).txt  CMakeLists.txt  README.md  README.rst  TODO.txt  aggregate_filter.cpp  aggregate_filter.hpp  aggregate_table.cpp  aggregate_table.hpp  aggregatefilter.cpp  aggregatefilter.hpp  aggregatetable.cpp  aggregator.cpp  aggregator.hpp  binaryheap.hpp  common.cpp  common.hpp  config.cpp  config.hpp  fdsdump.cpp  file_list.cpp  file_list.hpp  filelist.cpp  hashtable.cpp  hashtable.hpp  informationelements.hpp  inspect.cpp  ipfix_filter.cpp  ipfixfilter.cpp  ipfixfilter.hpp  printer.hpp  reader.cpp  reader.hpp  sorter.cpp  sorter.hpp  table_printer.cpp  table_printer.hpp  tableprinter.cpp  tableprinter.hpp  threadworker.cpp  (+3 more)
src/tools/ipfixsend/: CMakeLists.txt  ipfixsend.c  ipfixsend.h  reader.c  reader.h  sender.c  sender.h  siso.c  siso.h
src/tools/pcap2flow/: README.rst  pcap2flow.py
tests/modules/: CMakeLists.txt
tests/modules/input_failure/: CMakeLists.txt  config.c  config.h  dummy.c
tests/modules/intermediate_failure/: CMakeLists.txt  config.c  config.h  dummy.c
tests/modules/output_failure/: CMakeLists.txt  dummy.c
tests/unit/: CMakeLists.txt
tests/unit/core/: verbose.cpp
tests/unit/tools/: MsgGen.cpp  MsgGen.h
tests/unit_tests/: CMakeLists.txt  GTest.cmake  Tests.cmake  session.cpp
tests/unit_tests/core/: converters.cpp  verbose.cpp
tests/unit_tests/src/: convertors.cpp  verbose.cpp
tests/unit_tests/templater/: CMakeLists.txt  individual.xml  templater.cpp  templater_basic.cpp
(+454 files in other folders)
